{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 55,
  "lineage": "ee86ee50-6295-ba81-8d3e-3899f9cdebe1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "cloud_watch_eip_for_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03947e78eed84dc3d",
            "arn": "arn:aws:ec2:us-east-1:203918841420:elastic-ip/eipalloc-03947e78eed84dc3d",
            "association_id": "eipassoc-06f819c2f58db62de",
            "domain": "vpc",
            "id": "eipalloc-03947e78eed84dc3d",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d32ae5bc72518dd5",
            "private_dns": "ip-10-0-1-45.ec2.internal",
            "private_ip": "10.0.1.45",
            "public_dns": "ec2-3-92-104-32.compute-1.amazonaws.com",
            "public_ip": "3.92.104.32",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "cloud_watch_eip_for_nat_gateway"
            },
            "tags_all": {
              "Name": "cloud_watch_eip_for_nat_gateway"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "cloud_watch_web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07a6f770277670015",
            "arn": "arn:aws:ec2:us-east-1:203918841420:instance/i-08441fe84facab001",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08441fe84facab001",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "debson_keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03a31444c3850973c",
            "private_dns": "ip-10-0-3-182.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.182",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c84833619a321bef",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02ae0357c1c00fb87",
            "tags": {
              "Name": "cloud_watch_instance"
            },
            "tags_all": {
              "Name": "cloud_watch_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03a8efbd5d153083e"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.cloud_watch_igw",
            "aws_security_group.cloud_watch_web_server_sg",
            "aws_subnet.cloud_watch_private_subnet_az1a",
            "aws_vpc.cloud_watch_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "cloud_watch_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:203918841420:internet-gateway/igw-0e4c022b7e95d7917",
            "id": "igw-0e4c022b7e95d7917",
            "owner_id": "203918841420",
            "tags": {
              "Name": "cloud_watch_igw"
            },
            "tags_all": {
              "Name": "cloud_watch_igw"
            },
            "vpc_id": "vpc-098b4aaf60cf7eb78"
          },
          "dependencies": [
            "aws_vpc.cloud_watch_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "cloud_watch_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:203918841420:loadbalancer/app/cloud-watch-alb/478da1e6962b8718",
            "arn_suffix": "app/cloud-watch-alb/478da1e6962b8718",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "cloud-watch-alb-2004931883.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:203918841420:loadbalancer/app/cloud-watch-alb/478da1e6962b8718",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "cloud-watch-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-04643ea44d32a5220"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-035e4284789fd69a5"
              },
              {
                "subnet_id": "subnet-07eca388f164e3cc3"
              }
            ],
            "subnets": [
              "subnet-035e4284789fd69a5",
              "subnet-07eca388f164e3cc3"
            ],
            "tags": {
              "Name": "cloud-watch-alb"
            },
            "tags_all": {
              "Name": "cloud-watch-alb"
            },
            "vpc_id": "vpc-098b4aaf60cf7eb78",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_internet_gateway.cloud_watch_igw",
            "aws_security_group.alb_security_group",
            "aws_subnet.cloud_watch_public_subnet_az1a",
            "aws_subnet.cloud_watch_public_subnet_az1b",
            "aws_vpc.cloud_watch_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "cloud_watch_alb_http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:203918841420:listener/app/cloud-watch-alb/478da1e6962b8718/b76fa5b93f1b1750",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:203918841420:listener/app/cloud-watch-alb/478da1e6962b8718/b76fa5b93f1b1750",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:203918841420:loadbalancer/app/cloud-watch-alb/478da1e6962b8718",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.cloud_watch_igw",
            "aws_lb.cloud_watch_alb",
            "aws_security_group.alb_security_group",
            "aws_subnet.cloud_watch_public_subnet_az1a",
            "aws_subnet.cloud_watch_public_subnet_az1b",
            "aws_vpc.cloud_watch_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "cloud_watch_alb_https_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:203918841420:listener/app/cloud-watch-alb/478da1e6962b8718/1b6d2b4556399a07",
            "certificate_arn": "arn:aws:acm:us-east-1:203918841420:certificate/ca6abd0a-e0aa-415e-99f2-3070457bcaa2",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:203918841420:targetgroup/cloud-watch-TG/89873531460b173e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:203918841420:listener/app/cloud-watch-alb/478da1e6962b8718/1b6d2b4556399a07",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:203918841420:loadbalancer/app/cloud-watch-alb/478da1e6962b8718",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.ssl_certificate",
            "aws_internet_gateway.cloud_watch_igw",
            "aws_lb.cloud_watch_alb",
            "aws_lb_target_group.cloud_watch_TG",
            "aws_security_group.alb_security_group",
            "aws_subnet.cloud_watch_public_subnet_az1a",
            "aws_subnet.cloud_watch_public_subnet_az1b",
            "aws_vpc.cloud_watch_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "cloud_watch_TG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:203918841420:targetgroup/cloud-watch-TG/89873531460b173e",
            "arn_suffix": "targetgroup/cloud-watch-TG/89873531460b173e",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200,301,302",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:203918841420:targetgroup/cloud-watch-TG/89873531460b173e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:203918841420:loadbalancer/app/cloud-watch-alb/478da1e6962b8718"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "cloud-watch-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-098b4aaf60cf7eb78"
          },
          "dependencies": [
            "aws_vpc.cloud_watch_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "cloud_watch_target_group_attachement",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:203918841420:targetgroup/cloud-watch-TG/89873531460b173e-20250507225106305700000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:203918841420:targetgroup/cloud-watch-TG/89873531460b173e",
            "target_id": "i-08441fe84facab001"
          },
          "dependencies": [
            "aws_instance.cloud_watch_web_server",
            "aws_internet_gateway.cloud_watch_igw",
            "aws_lb_target_group.cloud_watch_TG",
            "aws_security_group.cloud_watch_web_server_sg",
            "aws_subnet.cloud_watch_private_subnet_az1a",
            "aws_vpc.cloud_watch_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "cloud_watch_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03947e78eed84dc3d",
            "association_id": "eipassoc-06f819c2f58db62de",
            "connectivity_type": "public",
            "id": "nat-0de40735af094296e",
            "network_interface_id": "eni-0d32ae5bc72518dd5",
            "private_ip": "10.0.1.45",
            "public_ip": "3.92.104.32",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-035e4284789fd69a5",
            "tags": {
              "Name": "cloud_watch_nat_gateway"
            },
            "tags_all": {
              "Name": "cloud_watch_nat_gateway"
            }
          },
          "dependencies": [
            "aws_eip.cloud_watch_eip_for_nat_gateway",
            "aws_internet_gateway.cloud_watch_igw",
            "aws_subnet.cloud_watch_public_subnet_az1a",
            "aws_vpc.cloud_watch_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "cloud_watch_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:203918841420:route-table/rtb-02267889ae7f2a28c",
            "id": "rtb-02267889ae7f2a28c",
            "owner_id": "203918841420",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0de40735af094296e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cloud_watch_public_rt"
            },
            "tags_all": {
              "Name": "cloud_watch_public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-098b4aaf60cf7eb78"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.cloud_watch_eip_for_nat_gateway",
            "aws_internet_gateway.cloud_watch_igw",
            "aws_nat_gateway.cloud_watch_nat_gateway",
            "aws_subnet.cloud_watch_public_subnet_az1a",
            "aws_vpc.cloud_watch_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "cloud_watch_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:203918841420:route-table/rtb-0bc0613f55663df26",
            "id": "rtb-0bc0613f55663df26",
            "owner_id": "203918841420",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e4c022b7e95d7917",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cloud_watch_public_rt"
            },
            "tags_all": {
              "Name": "cloud_watch_public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-098b4aaf60cf7eb78"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.cloud_watch_igw",
            "aws_vpc.cloud_watch_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association_az1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0213dcd1671305d42",
            "route_table_id": "rtb-02267889ae7f2a28c",
            "subnet_id": "subnet-02ae0357c1c00fb87"
          },
          "dependencies": [
            "aws_eip.cloud_watch_eip_for_nat_gateway",
            "aws_internet_gateway.cloud_watch_igw",
            "aws_nat_gateway.cloud_watch_nat_gateway",
            "aws_route_table.cloud_watch_private_rt",
            "aws_subnet.cloud_watch_private_subnet_az1a",
            "aws_subnet.cloud_watch_public_subnet_az1a",
            "aws_vpc.cloud_watch_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association_az1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e7a8fabfd7042c1f",
            "route_table_id": "rtb-02267889ae7f2a28c",
            "subnet_id": "subnet-008841e78006dbca9"
          },
          "dependencies": [
            "aws_eip.cloud_watch_eip_for_nat_gateway",
            "aws_internet_gateway.cloud_watch_igw",
            "aws_nat_gateway.cloud_watch_nat_gateway",
            "aws_route_table.cloud_watch_private_rt",
            "aws_subnet.cloud_watch_private_subnet_az1b",
            "aws_subnet.cloud_watch_public_subnet_az1a",
            "aws_vpc.cloud_watch_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association_az1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0481e8248b1a88a1c",
            "route_table_id": "rtb-0bc0613f55663df26",
            "subnet_id": "subnet-035e4284789fd69a5"
          },
          "dependencies": [
            "aws_internet_gateway.cloud_watch_igw",
            "aws_route_table.cloud_watch_public_rt",
            "aws_subnet.cloud_watch_public_subnet_az1a",
            "aws_vpc.cloud_watch_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association_az1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08c8887ff0c46e914",
            "route_table_id": "rtb-0bc0613f55663df26",
            "subnet_id": "subnet-07eca388f164e3cc3"
          },
          "dependencies": [
            "aws_internet_gateway.cloud_watch_igw",
            "aws_route_table.cloud_watch_public_rt",
            "aws_subnet.cloud_watch_public_subnet_az1b",
            "aws_vpc.cloud_watch_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:203918841420:security-group/sg-04643ea44d32a5220",
            "description": "enable http/https access on port 80/443",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04643ea44d32a5220",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "cloud_watch_alb_SG",
            "name_prefix": "",
            "owner_id": "203918841420",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cloud_watch_alb_SG"
            },
            "tags_all": {
              "Name": "cloud_watch_alb_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-098b4aaf60cf7eb78"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.cloud_watch_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cloud_watch_web_server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:203918841420:security-group/sg-03a8efbd5d153083e",
            "description": "Allow Internet access to the web server http port 80",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03a8efbd5d153083e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP access from the Internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "cloud-watch-sg",
            "name_prefix": "",
            "owner_id": "203918841420",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cloud-watch-web-server-SG"
            },
            "tags_all": {
              "Name": "cloud-watch-web-server-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-098b4aaf60cf7eb78"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.cloud_watch_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cloud_watch_private_subnet_az1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:203918841420:subnet/subnet-02ae0357c1c00fb87",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02ae0357c1c00fb87",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "203918841420",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloud_watch_private_subnet_az1a"
            },
            "tags_all": {
              "Name": "cloud_watch_private_subnet_az1a"
            },
            "vpc_id": "vpc-098b4aaf60cf7eb78"
          },
          "dependencies": [
            "aws_internet_gateway.cloud_watch_igw",
            "aws_vpc.cloud_watch_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cloud_watch_private_subnet_az1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:203918841420:subnet/subnet-008841e78006dbca9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-008841e78006dbca9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "203918841420",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloud_watch_private_subnet_az1b"
            },
            "tags_all": {
              "Name": "cloud_watch_private_subnet_az1b"
            },
            "vpc_id": "vpc-098b4aaf60cf7eb78"
          },
          "dependencies": [
            "aws_internet_gateway.cloud_watch_igw",
            "aws_vpc.cloud_watch_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cloud_watch_public_subnet_az1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:203918841420:subnet/subnet-035e4284789fd69a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-035e4284789fd69a5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "203918841420",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloud_watch_public_subnet_az1a"
            },
            "tags_all": {
              "Name": "cloud_watch_public_subnet_az1a"
            },
            "vpc_id": "vpc-098b4aaf60cf7eb78"
          },
          "dependencies": [
            "aws_internet_gateway.cloud_watch_igw",
            "aws_vpc.cloud_watch_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cloud_watch_public_subnet_az1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:203918841420:subnet/subnet-07eca388f164e3cc3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07eca388f164e3cc3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "203918841420",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloud_watch_public_subnet_az1b"
            },
            "tags_all": {
              "Name": "cloud_watch_public_subnet_az1b"
            },
            "vpc_id": "vpc-098b4aaf60cf7eb78"
          },
          "dependencies": [
            "aws_internet_gateway.cloud_watch_igw",
            "aws_vpc.cloud_watch_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cloud_watch_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:203918841420:vpc/vpc-098b4aaf60cf7eb78",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0048de7671ed1c6ac",
            "default_route_table_id": "rtb-02f73eb85e398609e",
            "default_security_group_id": "sg-0b586a65a91979c6a",
            "dhcp_options_id": "dopt-03ee71b1cc8f1b084",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-098b4aaf60cf7eb78",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02f73eb85e398609e",
            "owner_id": "203918841420",
            "tags": {
              "Name": "cloud_watch_vpc"
            },
            "tags_all": {
              "Name": "cloud_watch_vpc"
            }
          }
        }
      ]
    }
  ]
}